<resources>
    <string name="app_name">Cossacks</string>
    <string name="austria">Австрия выделяется среди других западноевропейских наций.
         Она довольно сильна на старте, так как в XVII веке можно нанять полезных юнитов
         — рундашира и кроата. Особенность рундашира: малое время постройки и высокая броня.
         Эффективнее всего использовать на старте, а также в артиллерийской стадии игры
         - кираса надежно защищает от картечи и огня многоствольных орудий. Кроат — легкий кавалерист, аналог
        наёмного сечевого казака.
         При всем этом и в XVIII веке Австрия не обделена полезными юнитами.
         Это пандур — сильный стрелок без штыка.
    </string>
    <string name="algeria">Страна с набором дешевой военной силы.
         У Алжира имеются два оригинальных юнита, которые быстро строятся — лучник и лёгкий пехотинец.
        Однако они обладают небольшим здоровьем.
         За счёт превосходства в численности на старте Алжир очень силён.
         Алжирский лучник на первом месте по скорости постройки, так же у него нет улучшений,
        которые ему не нужны из-за очень высокой силы, способной убить любого пешего одним выстрелом,
        или кавалериста двумя. Имеют плохую точность выстрела и эффективны только толпой против толпы.
         В конюшне доступен мамелюк — конный юнит, обладаюший большим здоровьем.
         Алжир не имеет перехода в XVIII век, а также не имеет возможности запустить шар.
         Также Алжир не имеет кирасированных юнитов, поэтому юниты уязвимы против артиллерии.
         В затяжной игре Алжир теряет свою силу.
    </string>
    <string name="bavaria">Сильный мушкетер 18 века, но с долгой постройкой.
         При полной прокачке имеет силу выстрела 106 единиц. Дешевые первые апгрейды для рейтара.
         Дорогие апгрейды для пикинера 17 века. Дорогие конюшни.
    </string>
    <string name="denmark">Самый сильный мушкетер 18 века в игре: повышенная атака штыком и из мушкета,
         относительно небольшой расход угля и железа, максимальная дальность стрельбы. Дешевый 18 век.
        Дорогие конюшни, но дешевые первые апгрейды для рейтара.
         Дорогие первые апгрейды для пикинера делают Данию уязвимой для раннего раша.
    </string>
    <string name="england">Довольно полезный юнит XVIII века — шотландский стрелок.
         Шотландец имеет довольно большой урон, но, как и мушкетер XVII века не может драться вблизи.
         Также у Англии присутствует оригинальный аналог барабанщика XVIII века — волынщик.
        Отличается лишь дешевизной.
    </string>
    <string name="france">У Франции имеется оригинальный конный юнит XVII века — королевский мушкетер.
        Его особенность: большая сила выстрела и медленное производство. В отличие от драгунов,
        которые при достаточной близости врага отбегают на недалекое расстояние,
        королевский мушкетер стоит на месте. В XVIII веке можно нанять егеря — аналог шотландского стрелка и пандура.
         Также имеется оригинальный драгун XVIII века. Его особенность: малая сила выстрела и быстрое производство.
         Содержание этого юнита требует большого количества золота.
    </string>
    <string name="hungary">Дорогое и слабое ополчение в 17 веке.</string>
    <string name="netherlands">Голландский мушкетер XVII века немного слабей остальных стрелков.
         Это компенсируется наиболее высокой скорострельностью, чем у юнитов такого типа других стран,
         после всех апгрейдов.
    </string>
    <string name="piedmont">Сильные священники, действительно способные оказать какую-то помощь войскам.</string>
    <string name="stone">Уникальность «Казаков» заключается в том,
        что в них действует очень серьезный алгоритм работы рынка.
        Благодаря огромным возможностям рынка в казаках имеют место такие понятия как «торг»
        и активные изменения цен. Поэтому нужно уметь не только эффективно добывать камень,
        а и выгодно менять его на рынке.
        Уметь эффективно добывать камень это один из важнейших факторов влияющих на победу.
        От количества добытого вами камня напрямую зависит ваша экономика,
        а значит размер армии и ее подготовленность.
        Умение эффективно добывать камень пригодиться всем игрокам играющим на любых опциях.
        Исключение составляет только опция «без рынка».
        Теперь, пожалуй, начнем с начала. С азов так сказать.
        Вот так выглядит обыкновенная кучка камня в игре</string>
    <string name="stone_2">Обратите внимание, склад нужно ставить именно под камнем,
    так как крестьянин носит камень в верхний левый угол склада. Прошу обратить внимание,
    что крестьяне, отмеченные на рисунке красной линией находятся в зоне угла приема склада!
    Они не катают тачки к складу,
    сразу после добычи необходимого количества камень автоматически передается на склад.
Эффективность работы этих четверых крестьян примерно равняется десяти работникам,
    носящим камень к складу… (По крайней мере, так показали мои исследования в редакторе).
    Такой маневр очень удачно можно использовать, например, при игре на «нормале» (стартовые ресурсы 1000).
    Поставив удачно склад и поравняв крестьян под уголок, вы обеспечите очень эффективную добычу камня.
Крестьянин каждый раз приносит по 40 единиц камня на склад.
    Чтобы увеличить добычу камня нужно произвести экономическое усовершенствование.
    Таких усовершенствований (далее «апа») всего два.
    Оба они находятся в академии и могут быть произведены, когда у вас будет достаточное количество ресурсов.
</string>
    <string name="stone_3">Второй (и важнейший экономический «ап» в игре)
        – Увеличить жалование горным рабочим (эффективность добычи камня 300 процентов).
        Стоимость «апа» золото 1550, еда 4200, уголь 12520.
        После данного усовершенствования крестьянин приносит 160 единиц камня на склад,
        что весьма существенно!
        Однако следует заметить, что эти «апы» действуют раздельно друг от друга и взаимозаменяемы.
        Например если вы сделаете сначала +200 процентов затем +300 процентов,
        то эффект будет только от последнего — +300 процентов.
        Наиболее распространенная ошибка начинающих – они делают сначала +300 процентов,
        а затем еще и +200 процентов, но в итоге работает только +200 процентов.
        Итак, теперь вернемся к эффективной добыче камня. Есть мнение, что на каждом складе должно работать примерно от десяти до двадцати (максимум 25) крестьян. Это связано с тем, что если на небольшую кучку камня напихать очень много крестьян то эффективность добычи будет низкая из-за того, что они начнут мешать друг другу. Приведу пример: (внимание цифры взяты условно). Первые десять крестьян будут добывать 10 единиц ресурса. Второй десяток крестьян на этот же склад будет добывать уже 8 единиц ресурса.
        Третий шесть единиц…и т.д. Вывод, нужно определить на склад максимально эффективное количество,
        а остальных перевести на другой склад. Загнали 15 человек на кучку, и ставим следующий склад.
        Чем больше складов, тем лучше. Все зависит от нации, за которую вы играете (самые дешевые,
        если не ошибаюсь за Нидерланды), так как цены на каждый следующий склад растут.
        Внимательно отнеситесь к этой проблеме, недопустимо чтобы склады,
        которые так нужны на камне стояли на добыче дерева, их лучше сжечь и переставить.
        Стоит обратить внимание хотя бы на такой момент.
        Когда профи играет на множествах, чтобы быстро построить рынок он ставит склад в ближайшем месте,
        затем сразу поджигает его – вот она экономия! Держу пари большинство из играющих новичков,
        копируя развитие, даже не догадывается, зачем жжет тот склад.
        Следует уделить внимание также переводу крестьян на камень.
        К примеру, вы идете к «апу» +300 процентов за счет ранее сделанного «апа» топор
        (добыча дерева 100 процентов) меняя дерево на необходимые ресурсы.
        Рекомендую примерно при 9-10 тысячах угля подготавливать экономику к переводу на добычу камня.
        Расставлять склады под камнем, отправлять понемногу на них крестьян.
        Так же обратите внимание, что гораздо выгоднее переставить точку сборки крестьян с Городских Центров
        на новую кучку камня, чем отрывать от работы уже занятых делом крестьян. Так, крестьянин сразу с Гор.
        Центра сразу оправляется на работу.
        Очень часто можно увидеть в игре фразу:
        «У меня очень мало камня на карте, это не честно я проиграю».
        Прежде чем паниковать обратите внимание на</string>
    <string name="stone_4">камень лежащий под горками,
        или на редкие россыпи в траве, они ничем не уступают классическим кучкам,
        а благодаря своей внимательности вы можете обрести 2-3, а то и больше дополнительных залежей камня.
        Но все же, если вы открыли карту вблизи своей базы, и убедились,
        что залежей действительно раз два и обчелся, следует подумать о том,
        чтобы закончить игру до перехода на камень использую все имеющиеся ресурсы на активное наступление…
И напоследок, посмотреть эффективность добычи камня в любой момент вы можете,
        нажав в игре кнопочку I, цифра стоящая напротив камня будет означать,
        если не ошибаюсь, количество добываемого камня за пол тика.
        Очень полезно после игры просмотреть статистику, сколько противник добыл камня за игру,
        когда перешел на камень, проанализировать. Во время просмотра записи можно нажать кнопочку J,
        и вы мгновенно перенесетесь в статистику по игре очень удобно для анализа.
</string>
    <string name="usual"> Крестьяне способны строить более чем 1 строение одной командой.
        Кликните на иконку строения, зажмите SHIFT и начинайте строить.
        Выделенные жители будут строить одно строение за другим.
</string>
    <string name="usual2"> Австрийский мушкетер имеет наибольшую дальность стрельбы
        и наименьшую минимальную дальность из всех мушкетеров 17 века.
</string>
    <string name="usual3"> Русский пикинер силен в атаке (9, другие 8), но слаб против мушкетов и пушек (1, другие 2).\n

---Апгрейды западных пикинеров не отличаются по конечным параметрам, но отличаются по уровням (одни нации +1, +2, +3, другие +2, +1, +4 и т.д.).

\n---Стоимость яхт и рыбацких лодок увеличивается с каждой построенной яхтой. Так же как и с наемными драгунами и пушками.

\n---Улучшение атаки мушкетера 18 века в казарме влияет только на атаку штыком, а не на силу выстрела.

\n---Улучшение защиты в казарме и конюшне влияет только на защиту от пик, мечей и стрел, а не от огнестрельнлго оружия.

\n---Легкий пехотинец часто выигрывает дуэль у пикинера, потому что пикинер просто «танцует» вокруг пехотинца, будучи не в состоянии поразить пехотинца длинной пикой. Они стоят слишком близко друг от друга.
</string>
    <string name="usual4">---Можно сделать кавалерийское построение еще одним способом.
        Выбрать войска, зажать SHIFT, выбрать рыбацкую лодку, указать место на карте,
        и войска построятся там стоя очень широко друг от друга, что хорошо помогает от артиллерии.
        Это не настоящее построение, больше прикол.\n
        ---Украинские крестьяне имеют вдвое большую дальность обзора, чем другие крестьяне.
</string>
    <string name="version">Version 0.1</string>
    <string name="info">Много полезной информации было взято с этого сайта-http://cossacks-game.ru</string>
    <string name="social">По всем вопросам прошу обращаться в :</string>
    <string name="socialVK">https://vk.com/quiteriver2</string>
    <string name="socialMail">Quite.River.1990@mail.ru</string>
    <string name="specialThanks">Special Thanks</string>
    <string name="specialThanksVKK">https://vk.com/miron_2016</string>
    <string name="specialThanksVKM">https://vk.com/id204491483</string>
</resources>